# SPPM

./: .gitignore  readme.md
code/: CMakeLists.txt  run_all.sh
code/include/: bound.hpp  brdf.hpp  camera.hpp  curve.hpp  disc.hpp  group.hpp  hit.hpp  hitpoint.hpp  image.hpp  kdtree.hpp  light.hpp  material.hpp  math.hpp  mesh.hpp  object3d.hpp  objectkdtree.hpp  plane.hpp  ray.hpp  renderer.hpp  revsurface.hpp  sampler.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  tile.hpp  transform.hpp  triangle.hpp
code/src/: image.cpp  kdtree.cpp  main.cpp  math.cpp  mesh.cpp  objectkdtree.cpp  renderer.cpp  sampler.cpp  scene_parser.cpp  texture.cpp
code/testcases/: scene.txt  scene01.txt  scene02.txt  scene03.txt  scene04.txt  scene05.txt  scene06.txt  scene07.txt  scene08.txt  scene09.txt  scene10.txt  scene11.txt  scene12.txt
report/: report.tex
